--- a/index.html
+++ b/index.html
@@ -164,6 +164,9 @@
     </tr></tbody></table>
 </td></tr></tbody></table>
 
+<div class="preview-subject float-center" align="center"><strong>SUBJECT:</strong> Help Struggling Adolescent ELLs Get Ready for the Future<br><strong>HIDDEN
+    TEASER:</strong> Equip your students with the literacy skills they need for college and career success.</div>
+
 			</center>
 		</td>
 	</tr>
