--- a/index.html
+++ b/index.html
@@ -263,8 +263,7 @@
                                                                     style="Margin:0;Margin-bottom:16px;color:#0a0a0a;font-family:sans-serif;font-size:16px;font-weight:400;line-height:1.4;margin:0;margin-bottom:0;padding:0;text-align:left">
                                                                     <a href="https://www.voyagersopris.com/literacy/everyday-english-plus/overview?utm_source=news&utm_medium=email&utm_campaign=2019_Q3_REG_ELL"
                                                                         style="Margin:0;color:#005587;font-family:sans-serif;font-weight:400;line-height:1.4;margin:0;padding:0;text-align:left;text-decoration:underline"><em><strong>Everyday
-                                                                                English Plus</strong></em><sup
-                                                                            style="display:inline-block;font-size:12px;line-height:12px;margin-left:3px">&reg;</sup></a>
+                                                                                English Plus</strong></em></a>
                                                                     helps ELLs develop and increase oral language and
                                                                     vocabulary skills as an essential precursor to
                                                                     literacy success, while <a
