--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <meta name="format-detection" content="email=no">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700" rel="stylesheet">
     <title>Help Struggling Adolescent ELLs Prepare for the Future</title>
-    
     <style>
         @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i');
 
@@ -47,15 +46,6 @@
         }
 
         @media only screen and (max-width:616px) {
-            table.body table.container .show-for-large {
-                display: none !important;
-                width: 0;
-                mso-hide: all;
-                overflow: hidden
-            }
-        }
-
-        @media only screen and (max-width:616px) {
             table.body img {
                 width: auto;
                 height: auto
@@ -86,6 +76,22 @@
             th.small-12 {
                 display: inline-block !important;
                 width: 100% !important
+            }
+        }
+
+        @media only screen {
+            html {
+                min-height: 100%;
+                background: #f3f3f3
+            }
+
+            a,
+            div,
+            h1,
+            p,
+            span,
+            td {
+                font-family: 'Open Sans', sans-serif !important
             }
         }
 
@@ -263,8 +269,8 @@
                                                                     style="Margin:0;Margin-bottom:16px;color:#0a0a0a;font-family:sans-serif;font-size:16px;font-weight:400;line-height:1.4;margin:0;margin-bottom:0;padding:0;text-align:left">
                                                                     <a href="https://www.voyagersopris.com/literacy/everyday-english-plus/overview?utm_source=news&utm_medium=email&utm_campaign=2019_Q3_REG_ELL"
                                                                         style="Margin:0;color:#005587;font-family:sans-serif;font-weight:400;line-height:1.4;margin:0;padding:0;text-align:left;text-decoration:underline"><em><strong>Everyday
-                                                                                English Plus</strong></em></a>
-                                                                    helps ELLs develop and increase oral language and
+                                                                                English Plus</strong></em></a> helps
+                                                                    ELLs develop and increase oral language and
                                                                     vocabulary skills as an essential precursor to
                                                                     literacy success, while <a
                                                                         href="https://www.voyagersopris.com/literacy/language-live/overview?utm_source=news&amp;utm_medium=email&amp;utm_campaign=2019_Q3_REG_ELL"
@@ -367,7 +373,7 @@
                                                                 </table>
                                                                 <center data-parsed=""
                                                                     style="min-width:252px;width:100%">
-                                                                    <table class="button radius tiny float-center"
+                                                                    <table class="button radius float-center"
                                                                         style="Margin:0 0 16px 0;border-collapse:collapse;border-spacing:0;float:none;margin:0 0 16px 0;margin-bottom:0!important;padding:0;text-align:center;vertical-align:top;width:auto">
                                                                         <tr
                                                                             style="padding:0;text-align:left;vertical-align:top">
@@ -378,9 +384,9 @@
                                                                                     <tr
                                                                                         style="padding:0;text-align:left;vertical-align:top">
                                                                                         <td
-                                                                                            style="-moz-hyphens:none;-ms-hyphens:none;-webkit-hyphens:none;Margin:0;background:#64d0e4;border:none;border-collapse:collapse!important;border-radius:3px;color:#fefefe;font-family:sans-serif;font-size:16px;font-weight:400;hyphens:none;line-height:1.4;margin:0;padding:4px 8px 4px 8px;text-align:center!important;vertical-align:top;word-wrap:break-word">
+                                                                                            style="-moz-hyphens:none;-ms-hyphens:none;-webkit-hyphens:none;Margin:0;background:#64d0e4;border:none;border-collapse:collapse!important;border-radius:3px;color:#fefefe;font-family:sans-serif;font-size:16px;font-weight:400;hyphens:none;line-height:1.4;margin:0;padding:0;text-align:center!important;vertical-align:top;word-wrap:break-word">
                                                                                             <a href="https://www.voyagersopris.com/literacy/everyday-english-plus/overview?utm_source=news&utm_medium=email&utm_campaign=2019_Q3_REG_ELL"
-                                                                                                style="Margin:0;border:0 solid #64d0e4;border-radius:3px;color:#fefefe;display:inline-block;font-family:sans-serif;font-size:10px;font-weight:400;letter-spacing:1px;line-height:1.4;margin:0;padding:4px 8px 4px 8px;text-align:center;text-decoration:none">LEARN
+                                                                                                style="Margin:0;border:0 solid #64d0e4;border-radius:3px;color:#fefefe;display:inline-block;font-family:sans-serif;font-size:16px;font-weight:700;letter-spacing:1px;line-height:1.4;margin:0;padding:8px 16px 8px 16px;text-align:center;text-decoration:none">LEARN
                                                                                                 MORE &raquo;</a></td>
                                                                                     </tr>
                                                                                 </table>
@@ -470,7 +476,7 @@
                                                                 </table>
                                                                 <center data-parsed=""
                                                                     style="min-width:252px;width:100%">
-                                                                    <table class="button radius tiny float-center"
+                                                                    <table class="button radius float-center"
                                                                         style="Margin:0 0 16px 0;border-collapse:collapse;border-spacing:0;float:none;margin:0 0 16px 0;margin-bottom:0!important;padding:0;text-align:center;vertical-align:top;width:auto">
                                                                         <tr
                                                                             style="padding:0;text-align:left;vertical-align:top">
@@ -481,9 +487,9 @@
                                                                                     <tr
                                                                                         style="padding:0;text-align:left;vertical-align:top">
                                                                                         <td
-                                                                                            style="-moz-hyphens:none;-ms-hyphens:none;-webkit-hyphens:none;Margin:0;background:#64d0e4;border:none;border-collapse:collapse!important;border-radius:3px;color:#fefefe;font-family:sans-serif;font-size:16px;font-weight:400;hyphens:none;line-height:1.4;margin:0;padding:4px 8px 4px 8px;text-align:center!important;vertical-align:top;word-wrap:break-word">
+                                                                                            style="-moz-hyphens:none;-ms-hyphens:none;-webkit-hyphens:none;Margin:0;background:#64d0e4;border:none;border-collapse:collapse!important;border-radius:3px;color:#fefefe;font-family:sans-serif;font-size:16px;font-weight:400;hyphens:none;line-height:1.4;margin:0;padding:0;text-align:center!important;vertical-align:top;word-wrap:break-word">
                                                                                             <a href="https://www.voyagersopris.com/literacy/language-live?utm_source=news&utm_medium=email&utm_campaign=2019_Q3_REG_ELL"
-                                                                                                style="Margin:0;border:0 solid #64d0e4;border-radius:3px;color:#fefefe;display:inline-block;font-family:sans-serif;font-size:10px;font-weight:400;letter-spacing:1px;line-height:1.4;margin:0;padding:4px 8px 4px 8px;text-align:center;text-decoration:none">LEARN
+                                                                                                style="Margin:0;border:0 solid #64d0e4;border-radius:3px;color:#fefefe;display:inline-block;font-family:sans-serif;font-size:16px;font-weight:700;letter-spacing:1px;line-height:1.4;margin:0;padding:8px 16px 8px 16px;text-align:center;text-decoration:none">LEARN
                                                                                                 MORE &raquo;</a></td>
                                                                                     </tr>
                                                                                 </table>
