--- a/index.html
+++ b/index.html
@@ -45,13 +45,12 @@
     <table class="row"><tbody><tr>
         <th class="small-12 large-12 columns first last"><table><tr><th>
             <p>Dear %%first_name%%,</p>
-            <p>Building a literacy foundation focused on vocabulary, oral language, and reading and listening
-                comprehension is key for adolescent English language learners. With dedicated instruction and the right
-                resources, these ELLs can gain the skills to reach grade-level success and prepare for college and
-                career paths.</p>
-            <p class="no-bottom-margin"><a href="https://www.voyagersopris.com/literacy/everyday-english-plus/overview?utm_source=news&utm_medium=email&utm_campaign=2019_Q3_REG_ELL"><em><strong> Everyday English Plus</strong></em></a> helps ELLs develop and increase oral language and
-                vocabulary skills as an essential precursor to literacy success, while <a href="https://www.voyagersopris.com/literacy/language-live/overview?utm_source=news&amp;utm_medium=email&amp;utm_campaign=2019_Q3_REG_ELL" target="_blank"><em><strong>LANGUAGE! Live</strong></em><sup>&reg;</sup></a> strengthens foundational and grade-level
-                literacy skills. </p>
+            <p>Building a literacy foundation focused on vocabulary, oral language, and reading and listening comprehension is key for adolescent English language learners. With dedicated instruction and the right resources, these ELLs can gain the skills to reach grade-level success and prepare for college and career paths.</p>
+            <p class="no-bottom-margin"><a href="https://www.voyagersopris.com/literacy/everyday-english-plus/overview?utm_source=news&utm_medium=email&utm_campaign=2019_Q3_REG_ELL"><em><strong>
+                        Everyday English Plus</strong></em></a> helps newcomers to English develop and increase the basic
+                oral language and vocabulary skills needed for successful literacy instruction. After mastering these
+                basic skills, <a href="https://www.voyagersopris.com/literacy/language-live/overview?utm_source=news&amp;utm_medium=email&amp;utm_campaign=2019_Q3_REG_ELL" target="_blank"><em><strong>LANGUAGE! Live</strong></em><sup>&reg;</sup></a> provides the foundational instructional to help these students attain
+                grade-level literacy skills.</p>
         </th>
 <th class="expander"></th></tr></table></th>
     </tr></tbody></table>
@@ -128,16 +127,16 @@
         </th></tr></table></th>
     </tr></tbody></table>
     <table dir="rtl" class="row footer"><tbody><tr>
-        <th class="small-12 large-6 columns first" valign="middle"><table><tr><th>
+        <th class="no-bottom-padding small-12 large-6 columns first" valign="middle"><table><tr><th>
             <table class="spacer"><tbody><tr><td height="16px" style="font-size:16px;line-height:16px;">&#xA0;</td></tr></tbody></table> 
-            <a href="https://www.voyagersopris.com?utm_source=news&amp;utm_medium=email&amp;utm_campaign=2019_Q1_Reg_NM_LL_ELL" target="_blank" title="https://www.voyagersopris.com?utm_source=news&amp;utm_medium=email&amp;utm_campaign=2019_Q1_Reg_NM_LL_ELL"><img src="http://go.voyagersopris.com/l/207592/2017-09-08/69hvv/207592/33471/vsp_logo_white_email__2x.png" height="40" width="215" class="vsl-logo float-right small-float-center"></a>
+            <a href="https://www.voyagersopris.com?utm_source=news&amp;utm_medium=email&amp;utm_campaign=CAMPAIGN_N" target="_blank" title="https://www.voyagersopris.com?utm_source=news&amp;utm_medium=email&amp;utm_campaign=CAMPAIGN_N"><img src="https://go.voyagersopris.com/l/207592/2019-07-18/9r372/207592/112595/VSL_logo_stacked_white.png" height="65" width="154" class="vsl-logo float-right small-float-center"></a>
             <table class="spacer"><tbody><tr><td height="16px" style="font-size:16px;line-height:16px;">&#xA0;</td></tr></tbody></table> 
         </th></tr></table></th>
-        <th class="address-cell small-12 large-6 columns last" dir="ltr" pardot-region="footer"><table><tr><th>
+        <th class="address-cell small-12 large-6 columns last" dir="ltr" pardot-region="footer" valign="middle"><table><tr><th>
             <table class="spacer"><tbody><tr><td height="16px" style="font-size:16px;line-height:16px;">&#xA0;</td></tr></tbody></table> 
-            <p>&copy; 2019 Voyager Sopris Learning.<br> All Rights Reserved.<br> 17855 Dallas
+            <p class="no-bottom-margin">&copy; 2019 Voyager Sopris Learning.<br> All Rights Reserved.<br> 17855 Dallas
                 Parkway, Dallas, TX 75287<br>
-                <a href="https://www.voyagersopris.com?utm_source=news&amp;utm_medium=email&amp;utm_campaign=2019_Q1_Reg_NM_LL_ELL" target="_blank">voyagersopris.com</a> / <a href="tel:18005476747" target="_blank" title="Call Voyager Sopris Learning">800.547.6747</a>
+                <a href="https://www.voyagersopris.com?utm_source=news&amp;utm_medium=email&amp;utm_campaign=CAMPAIGN_N" target="_blank">voyagersopris.com</a> / <a href="tel:18005476747" target="_blank" title="Call Voyager Sopris Learning">800.547.6747</a>
             </p>
         </th></tr></table></th>
     </tr></tbody></table>
