--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <table class="row"><tbody><tr>
         <th class="small-12 large-12 columns first last"><table><tr><th>
             <table class="spacer"><tbody><tr><td height="10px" style="font-size:10px;line-height:10px;">&#xA0;</td></tr></tbody></table> 
-            <h1>Empower Your English Learners<br class="hide-hardbreak"> with Critical Literacy Skills</h1>
+            <h1>Empower Your English Language Learners with Critical Literacy Skills</h1>
         </th>
 <th class="expander"></th></tr></table></th>
     </tr></tbody></table>
