--- a/index.html
+++ b/index.html
@@ -45,18 +45,22 @@
     <table class="row"><tbody><tr>
         <th class="small-12 large-12 columns first last"><table><tr><th>
             <p>Dear %%first_name%%,</p>
-            <p>Building a literacy foundation focused on vocabulary, oral language, and reading and listening comprehension is key for adolescent English language learners. With dedicated instruction and the right resources, these ELLs can gain the skills to reach grade-level success and prepare for college and career paths.</p>
+            <p>Building a literacy foundation focused on vocabulary, oral language, and reading and listening
+                comprehension is key for adolescent English language learners. With dedicated instruction and the right
+                resources, these ELLs can gain the skills to reach grade-level success and prepare for college and
+                career paths.</p>
+
             <p class="no-bottom-margin"><a href="https://www.voyagersopris.com/literacy/everyday-english-plus/overview?utm_source=news&utm_medium=email&utm_campaign=2019_Q3_REG_ELL"><em><strong>
-                        Everyday English Plus</strong></em></a> helps newcomers to English develop and increase the basic
-                oral language and vocabulary skills needed for successful literacy instruction. After mastering these
-                basic skills, <a href="https://www.voyagersopris.com/literacy/language-live/overview?utm_source=news&amp;utm_medium=email&amp;utm_campaign=2019_Q3_REG_ELL" target="_blank"><em><strong>LANGUAGE! Live</strong></em><sup>&reg;</sup></a> provides the foundational instructional to help these students attain
+                            Everyday English Plus</strong></em></a> helps ELLS develop and increase the basic oral
+                language and vocabulary skills necessary for day-to-day literacy instruction. After mastering these
+                basic skills, <a href="https://www.voyagersopris.com/literacy/language-live/overview?utm_source=news&amp;utm_medium=email&amp;utm_campaign=2019_Q3_REG_ELL" target="_blank"><em><strong>LANGUAGE! Live</strong></em><sup>&reg;</sup></a> provides the foundational instruction to help these students attain
                 grade-level literacy skills.</p>
+
         </th>
 <th class="expander"></th></tr></table></th>
     </tr></tbody></table>
     <table class="row"><tbody><tr>
         <th class="small-12 large-6 columns first"><table><tr><th>
-
             <a href="https://www.voyagersopris.com/literacy/everyday-english-plus/overview?utm_source=news&utm_medium=email&utm_campaign=2019_Q3_REG_ELL"><img src="http://go.voyagersopris.com/l/207592/2018-10-04/7vdzv/207592/71675/EEPlus_logo_2x.png" alt="Everyday English Plus"></a>
 
             <table>
