--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
             <p>Dear %%first_name%%,</p>
             <p>Building a literacy foundation focused on vocabulary, oral language, and reading and listening
                 comprehension is key for adolescent English language learners. With dedicated instruction and the right
-                resources, these ELLs can gain the skills to reach grade-level success and prepare for college and
+                resources, ELLs can gain the skills to reach grade-level success and prepare for college and
                 career paths.</p>
 
             <p class="no-bottom-margin"><a href="https://www.voyagersopris.com/literacy/everyday-english-plus/overview?utm_source=news&utm_medium=email&utm_campaign=2019_Q3_REG_ELL"><em><strong>
-                            Everyday English Plus</strong></em></a> helps ELLS develop and increase the basic oral
+                            Everyday English Plus</strong></em></a> helps ELLs develop and increase the basic oral
                 language and vocabulary skills necessary for day-to-day literacy instruction. After mastering these
-                basic skills, <a href="https://www.voyagersopris.com/literacy/language-live/overview?utm_source=news&amp;utm_medium=email&amp;utm_campaign=2019_Q3_REG_ELL" target="_blank"><em><strong>LANGUAGE! Live</strong></em><sup>&reg;</sup></a> provides the foundational instruction to help these students attain
+                basic skills, <a href="https://www.voyagersopris.com/literacy/language-live/overview?utm_source=news&amp;utm_medium=email&amp;utm_campaign=2019_Q3_REG_ELL" target="_blank"><em><strong>LANGUAGE! Live</strong></em><sup>&reg;</sup></a> provides the foundational instruction to help students attain
                 grade-level literacy skills.</p>
 
         </th>
